js/js.translator/testData/incremental/invalidation/fakeOverrideClassFunctionQualifiers/lib2/l2.kt
class Module1Class: Module2OpenClass() {
    fun testFunction1() = 1
}
